crates/nits-review-core/tests/snapshots/render__reindented_block_plus_real_change__exact.snap
---
source: crates/nits-review-core/tests/render.rs
expression: r
---
{
  "content": {
    "type": "Text",
    "total_rows": 7,
    "chunk_rows": 500,
    "chunk_count": 1,
    "highlighted": false,
    "additions": 3,
    "deletions": 3,
    "gaps": []
  },
  "rows": [
    {
      "type": "HunkHeader",
      "text": "@@ -1,6 +1,6 @@"
    },
    {
      "type": "Context",
      "left": {
        "line_no": 1,
        "text": "a",
        "ending": "Lf",
        "spans": [],
        "changed": []
      },
      "right": {
        "line_no": 1,
        "text": "a",
        "ending": "Lf",
        "spans": [],
        "changed": []
      }
    },
    {
      "type": "Context",
      "left": {
        "line_no": 2,
        "text": "b",
        "ending": "Lf",
        "spans": [],
        "changed": []
      },
      "right": {
        "line_no": 2,
        "text": "b",
        "ending": "Lf",
        "spans": [],
        "changed": []
      }
    },
    {
      "type": "Modified",
      "left": {
        "line_no": 3,
        "text": "  c",
        "ending": "Lf",
        "spans": [],
        "changed": [
          {
            "start": 0,
            "end": 2
          }
        ]
      },
      "right": {
        "line_no": 3,
        "text": "    c",
        "ending": "Lf",
        "spans": [],
        "changed": [
          {
            "start": 0,
            "end": 4
          }
        ]
      }
    },
    {
      "type": "Modified",
      "left": {
        "line_no": 4,
        "text": "  d",
        "ending": "Lf",
        "spans": [],
        "changed": [
          {
            "start": 0,
            "end": 2
          }
        ]
      },
      "right": {
        "line_no": 4,
        "text": "    d",
        "ending": "Lf",
        "spans": [],
        "changed": [
          {
            "start": 0,
            "end": 4
          }
        ]
      }
    },
    {
      "type": "Context",
      "left": {
        "line_no": 5,
        "text": "e",
        "ending": "Lf",
        "spans": [],
        "changed": []
      },
      "right": {
        "line_no": 5,
        "text": "e",
        "ending": "Lf",
        "spans": [],
        "changed": []
      }
    },
    {
      "type": "Modified",
      "left": {
        "line_no": 6,
        "text": "f",
        "ending": "Lf",
        "spans": [],
        "changed": [
          {
            "start": 0,
            "end": 1
          }
        ]
      },
      "right": {
        "line_no": 6,
        "text": "F",
        "ending": "Lf",
        "spans": [],
        "changed": [
          {
            "start": 0,
            "end": 1
          }
        ]
      }
    }
  ]
}
